--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <ul class="nav-menu" id="navMenu">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#ADAprojects">ADA Projects</a></li>
             </ul>
 
             <button class="hamburger" id="hamburger">☰</button>
@@ -65,7 +66,7 @@
     <br>
     <section id="my-site" class="my-site">
         <div class="container">
-            <h2>My Project</h2>
+            <h2>My Site</h2>
             <div class="site-card">
                 <img src="img/tacorootlogo2.png" alt="tacoroot">
                 <br>
